--- a/core/package.json
+++ b/core/package.json
@@ -19,7 +19,15 @@
     "jest": "^23.6.0",
     "jest-fetch-mock": "^2.0.1"
   },
+  "scripts": {
+    "test": "jest --browser --coverage"
+  },
   "browser": {
     "./src/index.js": "./src/browser.js"
+  },
+  "jest": {
+    "setupFiles": [
+      "<rootDir>/jest.setup.js"
+    ]
   }
 }
