--- a/core/.eslintrc.json
+++ b/core/.eslintrc.json
@@ -4,7 +4,10 @@
         "plugin:jest/recommended"
     ],
     "env": {
-        "browser": true
+        "browser": true,
+        "es6": true,
+        "jest": true,
+        "node": true
     },
     "plugins": [
         "jest"
