--- a/core/package.json
+++ b/core/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "repository": "https://github.com/globocom/gcrypt.git",
   "author": "CSIRT.globo",
-  "license": "BSD-3-Clause",
+  "license": "MIT",
   "devDependencies": {
     "@babel/cli": "^7.2.0",
     "@babel/core": "^7.2.0",
