--- a/api/package.json
+++ b/api/package.json
@@ -19,7 +19,9 @@
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.15.0",
     "eslint-plugin-jest": "^22.1.3",
-    "jest": "^23.6.0"
+    "jest": "^23.6.0",
+    "pem": "^1.14.1",
+    "tmp": "^0.0.33"
   },
   "scripts": {
     "lint": "eslint ./src",
