--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,10 @@
   "author": "CSIRT.globo",
   "license": "MIT",
   "dependencies": {
-    "commander": "^2.19.0"
+    "commander": "^2.19.0",
+    "express": "^4.16.4",
+    "morgan": "^1.9.1",
+    "nocache": "^2.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.0",
@@ -20,6 +23,7 @@
     "eslint-plugin-import": "^2.15.0",
     "eslint-plugin-jest": "^22.1.3",
     "jest": "^23.6.0",
+    "nodemon": "^1.18.9",
     "pem": "^1.14.1",
     "tmp": "^0.0.33"
   },
@@ -27,7 +31,8 @@
     "build": "rm -rf ./dist && babel ./src --out-dir dist/ --copy-files",
     "ci": "yarn run lint && yarn test && yarn run build",
     "lint": "eslint ./src",
-    "start": "npm run build && node ./dist/index.js",
+    "start": "yarn run build && node ./dist/index.js",
+    "start/dev": "nodemon ./src/index.js --exec babel-node",
     "test": "jest --coverage --verbose --env node ./src"
   }
 }
