--- a/api/package.json
+++ b/api/package.json
@@ -9,7 +9,8 @@
     "commander": "^2.19.0",
     "express": "^4.16.4",
     "morgan": "^1.9.1",
-    "nocache": "^2.0.0"
+    "nocache": "^2.0.0",
+    "openid-client": "^2.4.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.0",
@@ -23,6 +24,7 @@
     "eslint-plugin-import": "^2.15.0",
     "eslint-plugin-jest": "^22.1.3",
     "jest": "^23.6.0",
+    "nock": "^10.0.6",
     "nodemon": "^1.18.9",
     "pem": "^1.14.1",
     "tmp": "^0.0.33"
