--- a/api/package.json
+++ b/api/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "commander": "^2.19.0",
+    "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "morgan": "^1.9.1",
     "nocache": "^2.0.0",
