--- a/api/package.json
+++ b/api/package.json
@@ -28,6 +28,7 @@
     "nock": "^10.0.6",
     "nodemon": "^1.18.9",
     "pem": "^1.14.1",
+    "supertest": "^3.4.2",
     "tmp": "^0.0.33"
   },
   "scripts": {
