--- a/api/package.json
+++ b/api/package.json
@@ -9,6 +9,7 @@
     "commander": "^2.19.0",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.4.0",
     "morgan": "^1.9.1",
     "nocache": "^2.0.0",
     "openid-client": "^2.4.5"
